author-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: author-service
spec:
  selector:
    app: author-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
